# electrolyte-mixing-station

./: .gitignore  README.md  Workspace.ipynb  atinary_example.py  electrolye_recipe.csv  electrolyte_recipe.csv  instructions.ipynb  notebook.ipynb  pyproject.toml  workstation.ipynb
Arduino/mixing_station/: mixing_station.ino
data/CSVs/: accelerated_life_test.csv  current_state.csv  electrolyte_recipe.csv
data/config/: atinary_wrapper_config.json  conductivity_optimiser.json  example.json  integration_test.json  optimiser.json
data/devices/: hardcoded_values.json  mixing_stations.json
data/recipes/: campaign_start.csv  electrolyte_recipe.csv  last_state.csv  life_test.csv
fluid-handling-kit/src/: main.cpp
gantry-firmware/: platformio.ini
gantry-firmware/src/: main.cpp
gantry-kit/: platformio.ini
gantry-kit/src/: main.cpp
robot_controller/: experiment_setup.py  gantry_controller.py
src/robot_controller/: accelerated_life_test.py  admiral.py  atinary.py  command_line.py  experiment_setup.py  fluid_controller.py  gantry_controller.py  hardware_scheduler.py  mass_balance.py  mixing_station.py  pipette_controller.py  scheduler.py  squidstat.py  temperature_controller.py  test_cell.py  tools.py
